tests/reference/asr-lambda_01-1ec3e01.stderr
semantic error: The number of args to lambda function much match the number of args declared in function type
 --> tests/errors/lambda_01.py:5:8
  |
5 |     x: Callable[[i32, i32, i32], i32] = lambda p, q, r, s: p +  q + r + s
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^          ^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
